--- a/source/sass/layout/_content.scss
+++ b/source/sass/layout/_content.scss
@@ -3,39 +3,71 @@
 	.home {
 		height: 700px;
 		padding-top: 270px;
-		background: #222 url('../images/backgrounds/home_bg.png') no-repeat center bottom;
+		background: $dark_bg_color url('../images/backgrounds/home_bg.png') no-repeat center bottom;
 		background-size: cover; //to cover our div by all width
 
 		text-align: center;
-		color: #fff;
+		color: $white-color;
 
 		h3 {
 			padding-bottom: 40px;
 
-			font: 40px/40px Arial sans-serif;
+			font: 40px/40px 'droid_serifitalic';
 		}
 
 		h1 {
 			padding-bottom: 50px;
 
-			font: 75px/75px Arial sans-serif;
+			font: 75px/75px 'montserratbold';
 			text-transform: uppercase;
 		}
 
 		.btn_more {
 			display: inline-block;
 			padding: 20px 30px;
-			background: #fed136;
+			background: $orange_color;
 			border-radius: 4px;
 			border: none;
 
-			font: bold 24px/24px Arial sans-serif;
+			font: bold 18px/18px 'montserratbold';
 			text-transform: uppercase;
 
 			&:hover {
-				background: #feb322;
-				color: #fff;
+				background: $dark_orange_color;
+				color: $white-color;
 			}
 		}
-	}
+	} // end of .home
+
+	.services {
+		.services-item {
+			float: left;
+			width: 33.33%;
+			padding: 90px 10px 0;
+
+			p {
+				font: 14px/24px 'roboto_slabregular';
+				letter-spacing: -0.049em;
+				color: $grey_font_color;
+			}
+		}
+
+		.e-commerce {
+				background: url(../images/icons/icon_services_ecommerce.png) no-repeat center top;
+			}
+
+			.responsive-web {
+				background: url(../images/icons/icon_services_responsive_web.png) no-repeat center top;
+			}
+
+			.web-security {
+				background: url(../images/icons/icon_services_web_security.png) no-repeat center top;
+			}
+		
+		} //end of .services
+
+		.portfolio {
+			background-color: $light_bg_color;
+
+		} //end of .portfolio
 }
