--- a/source/sass/layout/_general.scss
+++ b/source/sass/layout/_general.scss
@@ -53,3 +53,19 @@ body {
 .clearfix:after {
 	clear: both;
 }
+
+.left {
+	float: left;
+}
+
+.right {
+	float: right;
+}
+
+.text-left {
+	text-align: left;
+}
+
+.text-right {
+	text-align: right;
+}
