--- a/source/sass/layout/_colors.scss
+++ b/source/sass/layout/_colors.scss
@@ -2,5 +2,6 @@ $white-color: #fff;
 $dark_bg_color: #222;
 $light_bg_color: #f7f7f7;
 $grey_font_color: #777;
+$grey_border_color: #f1f1f1;
 $orange_color: #fed136;
 $dark_orange_color: #feb322;
