--- a/public/css/base.css
+++ b/public/css/base.css
@@ -5997,3 +5997,61 @@ header {
   color: #fff;
   text-transform: uppercase;
   text-shadow: 0 1px rgba(0, 0, 0, 0.3); }
+
+.wrapper .team {
+  background-color: #f7f7f7; }
+  .wrapper .team .team-wrap {
+    margin-bottom: 45px; }
+  .wrapper .team .team-item {
+    float: left;
+    width: 33.33%; }
+    .wrapper .team .team-item img {
+      margin-bottom: 15px;
+      display: inline-block;
+      width: 220px;
+      height: 220px;
+      border: 7px solid #fff;
+      border-radius: 50%; }
+    .wrapper .team .team-item .team-item-footer .item-title {
+      font-size: 16px/16px;
+      text-transform: capitalize; }
+    .wrapper .team .team-item .team-item-footer span {
+      font: 14px/14px 'roboto_slabregular';
+      color: #777; }
+    .wrapper .team .team-item .team-item-footer .social {
+      margin-top: 10px; }
+      .wrapper .team .team-item .team-item-footer .social a {
+        display: inline-block;
+        width: 40px;
+        height: 40px;
+        margin: 0 3px;
+        border: 3px solid #222;
+        border-radius: 50%;
+        background: url(../images/icons/icons_social.png) no-repeat; }
+      .wrapper .team .team-item .team-item-footer .social .icon-twitter {
+        background-position: -2px -4px; }
+        .wrapper .team .team-item .team-item-footer .social .icon-twitter:hover {
+          background-color: #00aced;
+          border-color: #00aced;
+          background-position: -2px -44px; }
+      .wrapper .team .team-item .team-item-footer .social .icon-facebook {
+        background-position: -42px -4px; }
+        .wrapper .team .team-item .team-item-footer .social .icon-facebook:hover {
+          background-color: #3b5998;
+          border-color: #3b5998;
+          background-position: -42px -44px; }
+      .wrapper .team .team-item .team-item-footer .social .icon-pinterest {
+        background-position: -82px -4px; }
+        .wrapper .team .team-item .team-item-footer .social .icon-pinterest:hover {
+          background-color: #cb2028;
+          border-color: #cb2028;
+          background-position: -82px -44px; }
+      .wrapper .team .team-item .team-item-footer .social .icon-googleplus {
+        background-position: -122px -4px; }
+        .wrapper .team .team-item .team-item-footer .social .icon-googleplus:hover {
+          background-color: #d95232;
+          border-color: #d95232;
+          background-position: -122px -44px; }
+  .wrapper .team .team-description {
+    font: 16px/16px 'roboto_slabregular';
+    color: #777; }
