--- a/source/sass/layout/_content.scss
+++ b/source/sass/layout/_content.scss
@@ -101,8 +101,7 @@
 			}
 		} //end of .portfolio
 
-		.about {
-			
+		.about {			
 			.about-item {
 				float: left;
 
@@ -159,6 +158,100 @@
 					text-transform: uppercase;
 					text-shadow: 0 1px rgba(0,0,0,0.3);
 				} // end of .about-link
+		} // end of .about
+		
+		.team {
+			background-color: $light_bg_color;
 
-			} //end of .about
+			.team-wrap {
+				margin-bottom: 45px;
+			}
+
+			.team-item {
+				float: left;
+				width: 33.33%;
+
+				img {
+					margin-bottom: 15px;
+					display: inline-block;
+					width: 220px;
+					height: 220px;
+
+					border: 7px solid $white_color;
+					border-radius: 50%;
+				}
+
+				.team-item-footer {
+					
+					.item-title {
+						font-size: 16px/16px;
+						text-transform: capitalize;
+					}
+
+					span {
+						font: 14px/14px 'roboto_slabregular';
+						color: $grey_font_color;
+					}
+
+					.social {
+						margin-top: 10px;
+
+						a {
+							display: inline-block; //to set width and height for it
+							width: 40px;
+							height: 40px;
+							margin: 0 3px;
+							
+							border: 3px solid $dark_bg_color;
+							border-radius: 50%;
+
+							background: url(../images/icons/icons_social.png) no-repeat;
+						}
+
+						.icon-twitter {
+							background-position: -2px -4px;
+
+							&:hover {
+								background-color: #00aced;
+								border-color: #00aced;
+								background-position: -2px -44px;
+							}
+						}
+						.icon-facebook {
+							background-position: -42px -4px;
+
+							&:hover {
+								background-color: #3b5998;
+								border-color: #3b5998;
+								background-position: -42px -44px;
+							}
+						}
+						.icon-pinterest {
+							background-position: -82px -4px;
+
+							&:hover {
+								background-color: #cb2028;
+								border-color: #cb2028;
+								background-position: -82px -44px;
+							}
+						}
+						.icon-googleplus {
+							background-position: -122px -4px;
+
+							&:hover {
+								background-color: #d95232;
+								border-color: #d95232;
+								background-position: -122px -44px;
+							}
+						}
+					} // end of .social
+				} // end of .team-item-footer
+			} // end of .team-item
+
+			.team-description {
+				font: 16px/16px 'roboto_slabregular';
+				color: $grey_font_color;
+			}
+
+			} // end of .team
 }
