--- a/source/sass/layout/_content.scss
+++ b/source/sass/layout/_content.scss
@@ -252,6 +252,22 @@
 				font: 16px/16px 'roboto_slabregular';
 				color: $grey_font_color;
 			}
+		} // end of .team
 
-			} // end of .team
+		.brands {
+			padding: 60px 0;
+
+			a {
+				display: inline-block;
+				margin-right: 40px;
+
+				&:last-child {
+					margin-right: 0;
+				}
+			}
+
+			img {
+				vertical-align: middle;
+			}
+		}
 }
