--- a/source/sass/layout/_colors.scss
+++ b/source/sass/layout/_colors.scss
@@ -2,6 +2,8 @@ $white-color: #fff;
 $dark_bg_color: #222;
 $light_bg_color: #f7f7f7;
 $grey_font_color: #777;
+$light_grey_font: #bbb;
 $grey_border_color: #f1f1f1;
+$light_grey_border: #ccc;
 $orange_color: #fed136;
 $dark_orange_color: #feb322;
